[package]
version = "0.1.0"
name = "rust_test"
repository = "https://github.com/LiveViewTech/rust-test"
authors = ["Spencer Davies <spencerhdavies@gmail.com>"]
description = "Rust/wasm test for WebDev applicants"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
wasm-bindgen = "^0.2.67"
serde = "1.0.111"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1.4.0", features = ["serde-1"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']